--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,10 +20,10 @@ jobs:
       run: cd HF1
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/HF1/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/HF1/build --config ${{env.BUILD_TYPE}}
+      run: cmake /HF1 --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
   hf2-build:
     runs-on: macos-latest
@@ -38,7 +38,7 @@ jobs:
       run: cd HF2
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/HF2/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/HF2/build --config ${{env.BUILD_TYPE}}
+      run: cmake /HF2 --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
