--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Go to HF1
       run: cd HF1
 
-#    - name: Configure CMake
-#      run: cmake ./HF1 -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/HF1/build
 
     - name: Build
-      run: cmake ./HF1 --build ${{github.workspace}}/build
+      run: cmake --build ${{github.workspace}}/HF1/build
 
   hf2-build:
     runs-on: macos-latest
@@ -38,7 +38,7 @@ jobs:
       run: cd HF2
 
     - name: Configure CMake
-      run: cmake ./HF2 -B ${{github.workspace}}/build
+      run: cmake -B ${{github.workspace}}/HF2/build
 
     - name: Build
-      run: cmake ./HF2 --build ${{github.workspace}}/build
+      run: cmake --build ${{github.workspace}}/HF2/build
