--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,14 +16,8 @@ jobs:
     - name: Setup Xcode version
       uses: maxim-lobanov/setup-xcode@v1
 
-    - name: Go to HF1
-      run: cd HF1
-
-    - name: wtf
-      run: ls -la
-
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/HF1/build
+      run: cmake ./HF1 -B ${{github.workspace}}/HF1/build
 
     - name: Build
       run: cmake --build ${{github.workspace}}/HF1/build
@@ -41,7 +35,7 @@ jobs:
       run: cd HF2
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/HF2/build
+      run: cmake ./HF2 -B ${{github.workspace}}/HF2/build
 
     - name: Build
       run: cmake --build ${{github.workspace}}/HF2/build
